<resources>
    <string name="app_name">Animations</string>
    <string name="frame_by_frame">Frame by frame</string>
    <string name="view_from_xml">View from xml</string>
    <string name="xml">xml</string>
    <string name="code">code</string>
    <string name="lottie">Lottie</string>
    <string name="value_animation">value animation</string>
    <string name="value_animation_text">Value animation</string>
    <string name="prop_value">combine with property value holder</string>
    <string name="view_property_animation">view property animation</string>
    <string name="scene_animation">Scene animation</string>
    <string name="shared_transition_animation">shared transition animation</string>
    <string name="activity_opening_custom_animation">Activity opening custom animation</string>
    <string name="hello">Hello!</string>
    <string name="animate">Animate</string>
    <string name="down">down</string>
    <string name="up">up</string>
</resources>