<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/frame_by_frame_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_by_frame" />

    <Button
        android:id="@+id/view_from_xml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_from_xml" />

    <Button
        android:id="@+id/lottie_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lottie" />

    <Button
        android:id="@+id/value_animation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value_animation" />

    <Button
        android:id="@+id/view_property_animation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_property_animation" />
    <Button
        android:id="@+id/scene_animation_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scene_animation" />
</LinearLayout>
